@@ -68,15 +68,18 @@
     <lucene.version>5.5.5</lucene.version>
     <bouncycastle.version>1.59</bouncycastle.version>
     <generate-config-docs-phase>prepare-package</generate-config-docs-phase>
+    <java9.exports/>
+    <test.runner.jvm/>
     <test.runner.jvm.settings.additional/>
     <test.runner.jvm.settings>-Xmx2G -XX:+UseG1GC -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError
       -XX:HeapDumpPath=target/test-data -Dorg.neo4j.unsafe.impl.internal.dragons.UnsafeUtil.DIRTY_MEMORY=true
       -Dorg.neo4j.unsafe.impl.internal.dragons.UnsafeUtil.CHECK_NATIVE_ACCESS=true
       -Dorg.neo4j.io.pagecache.impl.muninn.usePreciseCursorErrorStackTraces=true
       -Dorg.neo4j.kernel.impl.api.KernelStatement.trackStatements=true
-      -XX:+UnlockExperimentalVMOptions -XX:+TrustFinalNonStaticFields ${test.runner.jvm.settings.additional}
+      -Dorg.org.neo4j.kernel.impl.newapi.DefaultCursors.trackCursors=true
+      -XX:+UnlockExperimentalVMOptions -XX:+TrustFinalNonStaticFields ${java9.exports} ${test.runner.jvm.settings.additional}
     </test.runner.jvm.settings>
-    <jetty.version>9.2.22.v20170606</jetty.version>
+    <jetty.version>9.4.8.v20171121</jetty.version>
     <findbugs.version>3.0.1</findbugs.version>
     <git.commit>unknown-commit</git.commit>
     <forkCounts>0</forkCounts>
@@ -85,11 +88,14 @@
     <licensesVersion>7</licensesVersion>
     <license-text.header>AGPL-3-header.txt</license-text.header>
 
+    <scala-maven-plugin.version>3.3.2</scala-maven-plugin.version>
     <scala.version>2.11.12</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
     <asm.version>6.0</asm.version>
     <metrics.version>4.0.2</metrics.version>
+    <scala.target.vm>1.8</scala.target.vm>
     <scala.java9.arg/>
+    <jersey.version>1.19.3</jersey.version>
     <checkstyle.strict>true</checkstyle.strict>
   </properties>
 
@@ -237,7 +243,7 @@
         <plugin>
           <groupId>org.revapi</groupId>
           <artifactId>revapi-maven-plugin</artifactId>
-          <version>0.9.5</version>
+          <version>0.10.0</version>
           <configuration>
             <versionFormat>^\d+\.\d+\.\d+$</versionFormat>
             <analysisConfiguration>
@@ -297,6 +303,32 @@
                   <class>org.neo4j.graphalgo.WeightedPath</class>
                   <justification>Cleanup accidental Path exposure as a Resource.</justification>
                 </item>
+                <item>
+                  <code>java.class.removed</code>
+                  <old>interface org.neo4j.management.Cache</old>
+                  <classSimpleName>Cache</classSimpleName>
+                  <package>org.neo4j.management</package>
+                  <elementKind>interface</elementKind>
+                  <justification>The implemented class was removed in 3.0, but this interface lingered on.</justification>
+                </item>
+                <item>
+                  <code>java.method.removed</code>
+                  <classSimpleName>Neo4jManager</classSimpleName>
+                  <methodName>getCacheBeans</methodName>
+                  <package>org.neo4j.management</package>
+                  <elementKind>method</elementKind>
+                  <justification>The implemented class was removed in 3.0, but this interface lingered on.</justification>
+                </item>
+                <item>
+                  <code>java.class.removed</code>
+                  <class>org.neo4j.helpers.FailableConcurrentTransfer</class>
+                  <justification>Class is never used</justification>
+                </item>
+                <item>
+                  <code>java.field.nowFinal</code>
+                  <old>field org.neo4j.graphdb.InputPosition.empty</old>
+                  <justification>Changes to this field should not be allowed</justification>
+                </item>
               </revapi.ignore>
               <revapi.semver.ignore>
                 <enabled>true</enabled>
@@ -316,12 +348,12 @@
             <dependency>
               <groupId>org.revapi</groupId>
               <artifactId>revapi-java</artifactId>
-              <version>0.14.4</version>
+              <version>0.15.1</version>
             </dependency>
             <dependency>
               <groupId>org.revapi</groupId>
               <artifactId>revapi-basic-features</artifactId>
-              <version>0.6.3</version>
+              <version>0.7.0</version>
             </dependency>
           </dependencies>
           <executions>
@@ -337,7 +369,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.20.1</version>
+          <version>2.21.0</version>
           <configuration>
             <forkCount>${forkCounts}</forkCount>
             <reuseForks>true</reuseForks>
@@ -347,22 +379,34 @@
               <dbms.pagecache.memory.default.override>8m</dbms.pagecache.memory.default.override>
               <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
             </systemPropertyVariables>
+            <jvm>${test.runner.jvm}</jvm>
+            <excludes>
+              <exclude>**/*$*.class</exclude>
+              <exclude>**/*IntegrationTest.class</exclude>
+            </excludes>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.20.1</version>
+          <version>2.21.0</version>
           <configuration>
             <argLine>${test.runner.jvm.settings}</argLine>
             <forkCount>${forkCounts}</forkCount>
             <reuseForks>true</reuseForks>
             <runOrder>random</runOrder>
+            <includes>
+              <include>**/IT*.class</include>
+              <include>**/*IT.class</include>
+              <include>**/*ITCase.class</include>
+              <include>**/*IntegrationTest.class</include>
+            </includes>
             <systemPropertyVariables>
               <dbms.pagecache.memory.default.override>8m</dbms.pagecache.memory.default.override>
               <port.authority.directory>${user.dir}/target/port-authority-${maven.build.timestamp}</port.authority.directory>
               <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
             </systemPropertyVariables>
+            <jvm>${test.runner.jvm}</jvm>
           </configuration>
           <executions>
             <execution>
@@ -396,6 +440,7 @@
                   </manifest>
                   <manifestEntries>
                     <Url>${project.organization.url}</Url>
+                    <Automatic-Module-Name>${moduleName}</Automatic-Module-Name>
                   </manifestEntries>
                 </archive>
               </configuration>
@@ -437,7 +482,7 @@
         <plugin>
           <groupId>org.neo4j.build.plugins</groupId>
           <artifactId>licensing-maven-plugin</artifactId>
-          <version>1.7.5</version>
+          <version>1.7.6</version>
           <configuration>
             <failIfDisliked>true</failIfDisliked>
             <failIfMissing>true</failIfMissing>
@@ -482,7 +527,7 @@
         <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
-          <version>3.3.1</version>
+          <version>${scala-maven-plugin.version}</version>
 
           <configuration>
             <scalaVersion>${scala.version}</scalaVersion>
@@ -491,7 +536,7 @@
               <arg>-Xmax-classfile-name</arg>
               <arg>100</arg>
               <arg>-Xlint</arg>
-              <arg>-target:jvm-${maven.compiler.target}</arg>
+              <arg>-target:jvm-${scala.target.vm}</arg>
               <arg>${scala.java9.arg}</arg>
             </args>
             <jvmArgs>
@@ -520,15 +565,39 @@
           </executions>
         </plugin>
 
+        <!-- Enforce naming if packages -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>3.0.0-M1</version>
+          <configuration>
+            <rules>
+              <evaluateBeanshell>
+                <message>Maven module has to be in a "groupId" beginning with "org.neo4j"</message>
+                <condition>String s = "${project.groupId}"; s.startsWith("org.neo4j")</condition>
+              </evaluateBeanshell>
+              <requireFilesDontExist>
+                <message>You are not allowed to have classes in "com" package</message>
+                <files>
+                  <file>${project.build.sourceDirectory}/com</file>
+                  <file>${project.build.testSourceDirectory}/com</file>
+                </files>
+              </requireFilesDontExist>
+            </rules>
+            <fail>true</fail>
+          </configuration>
+        </plugin>
+
         <!-- Plugin version management -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
           <configuration>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
+            <compilerArgument>${java9.exports}</compilerArgument>
           </configuration>
-          <version>3.7.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -591,7 +660,7 @@
         <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
-          <version>3.1.0</version>
+          <version>3.1.2</version>
           <dependencies>
             <!-- https://mvnrepository.com/artifact/org.owasp/dependency-check-maven -->
             <dependency>
@@ -622,7 +691,7 @@
       <!-- Checkstyle is always validated -->
       <plugin>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
+        <version>3.0.0</version>
         <configuration>
           <configLocation>build/checkstyle.xml</configLocation>
           <consoleOutput>true</consoleOutput>
@@ -635,7 +704,7 @@
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>8.3</version>
+            <version>8.8</version>
           </dependency>
         </dependencies>
         <executions>
@@ -712,6 +781,19 @@
             <inceptionYear>${project.inceptionYear}</inceptionYear>
           </properties>
         </configuration>
+      </plugin>
+
+      <!-- Always enforce -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
@@ -848,9 +930,29 @@
         <jdk>9</jdk>
       </activation>
       <properties>
+        <java9.exports>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-modules java.xml.bind</java9.exports>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <scala.java9.arg>-nobootcp</scala.java9.arg>
       </properties>
+    </profile>
+
+    <profile>
+      <id>zinc</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>net.alchim31.maven</groupId>
+              <artifactId>scala-maven-plugin</artifactId>
+              <version>${scala-maven-plugin.version}</version>
+              <configuration>
+                <recompileMode>incremental</recompileMode>
+                <useZincServer>true</useZincServer>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
   </profiles>
 
@@ -894,7 +996,7 @@
       <dependency>
         <groupId>com.github.ben-manes.caffeine</groupId>
         <artifactId>caffeine</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.2</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -911,7 +1013,7 @@
       <dependency>
         <groupId>org.neo4j.driver</groupId>
         <artifactId>neo4j-java-driver</artifactId>
-        <version>1.4.3</version>
+        <version>1.5.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -923,7 +1025,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava-testlib</artifactId>
-        <version>23.6-jre</version>
+        <version>24.1-jre</version>
         <scope>test</scope>
       </dependency>
 
@@ -980,7 +1082,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.13.0</version>
+        <version>2.17.0</version>
         <scope>test</scope>
       </dependency>
 
@@ -1116,12 +1218,12 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>1.1</version>
+        <version>1.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-compress</artifactId>
-        <version>1.15</version>
+        <version>1.16.1</version>
       </dependency>
 
       <!-- Netty is used by three components: Com, Cluster and Bolt Socket Transport.
@@ -1139,18 +1241,13 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
-        <version>4.1.17.Final</version>
+        <version>4.1.23.Final</version>
       </dependency>
 
       <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
-      </dependency>
-      <dependency>
-        <groupId>org.codehaus.janino</groupId>
-        <artifactId>janino</artifactId>
-        <version>3.0.8</version>
       </dependency>
       <dependency>
         <groupId>net.sf.opencsv</groupId>
@@ -1160,7 +1257,7 @@
       <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-client</artifactId>
-        <version>1.19</version>
+        <version>${jersey.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.ws.rs</groupId>
@@ -1171,7 +1268,7 @@
       <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-server</artifactId>
-        <version>1.19</version>
+        <version>${jersey.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.ws.rs</groupId>
@@ -1182,18 +1279,13 @@
       <dependency>
         <groupId>com.sun.jersey</groupId>
         <artifactId>jersey-servlet</artifactId>
-        <version>1.19</version>
+        <version>${jersey.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.jersey.contribs</groupId>
-        <artifactId>jersey-multipart</artifactId>
-        <version>1.19</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
@@ -1233,7 +1325,7 @@
       <dependency>
         <groupId>org.mozilla</groupId>
         <artifactId>rhino</artifactId>
-        <version>1.7R4</version>
+        <version>1.7.9</version>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
